<?xml version="1.0"?>
<package>

  <name>jsk_201604_cmo</name>
  <version>1.0.0</version>
  <description>Catch Moving Object task project.</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roseus</build_depend>
  <build_depend>gazebo</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>fetch_gazebo</run_depend>
  <run_depend>fetcheus</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <test_depend>jsk_tools</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>

</package>
