<?xml version="1.0"?>
<package>

  <name>jsk_2016_04_cmo</name>
  <version>0.0.1</version>
  <description>Catch Moving Object task project.</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
